import UIKit

final class EditProfileViewController: UIViewController {
    private let viewModel: EditProfileViewModelProtocol
    private weak var delegate: ProfileUpdateDelegate?
    
    private lazy var closeButton: UIButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "closeButton"
        button.setImage(UIImage.Icons.close, for: .normal)
        button.addTarget(self, action: #selector(closeDidTap), for: .touchUpInside)
        return button
    }()
...
        let imageView = UIImageView(image: UIImage.Icons.userPlaceholder)
        imageView.layer.cornerRadius = 35
        imageView.layer.masksToBounds = true
        return imageView
    }()
    
    private lazy var changeAvatarLabel: UILabel = {
        let label = UILabel()
        label.accessibilityIdentifier = "changeAvatarLabel"
        label.backgroundColor = .appBlack.withAlphaComponent(0.6)
        label.layer.cornerRadius = 35
        label.layer.masksToBounds = true
        label.text = "Сменить фото"
...
